--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/admin/admin.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/admin/admin.html
@@ -57,7 +57,7 @@
 		                                    </ll-col>
 		                                </ll-row>
 		                            </div>
-		                            <ll-table-zz :data-wrap="dataWrap" 
+		                            <ll-table-zz :data-wrap="dataPacket" 
 		                            	:readonly="false" 
 		                            	ref="tableAdmin"
                             			@row-dblclick="rowDblcick"	
@@ -93,12 +93,12 @@
     </div>
 
     <script type="text/javascript">
-        var dataWrap = ajaxResponse.get("dataWrap");
+        var dataPacket = ajaxResponse.get("dataPacket");
 
         var vm = new Vue({
             el: '#app',
             data: {
-                dataWrap: dataWrap,
+                dataPacket: dataPacket,
                 pageContextPath:$$pageContextPath,
                 datasource: $$pageContextPath + "sys/department-tree/departments",
                 labelDatasource: $$pageContextPath + "sys/department/label",
@@ -117,21 +117,21 @@
             
             methods: {
                 retrieve:function() {
-                	var dataWrap=this.dataWrap;
-                	if(dataWrap==null)
-                		dataWrap=$.createAjaxDataWrap();
-                	dataWrap.data=this.menuForm;
+                	var dataPacket=this.dataPacket;
+                	if(dataPacket==null)
+                		dataPacket=$.createAjaxDataPacket();
+                	dataPacket.data=this.menuForm;
                     $.request({
                         url: $$pageContextPath + "sys/admin/retrieve",
                         data: {
-                        	dataWrap:dataWrap
+                        	dataPacket:dataPacket
                         },
                         success: function (response) {
-                            var dataWrap = response.get("dataWrap");
-                            if (dataWrap == null || dataWrap.dataList == null || dataWrap.dataList.length ==
+                            var dataPacket = response.get("dataPacket");
+                            if (dataPacket == null || dataPacket.dataList == null || dataPacket.dataList.length ==
                                 0)
                                 $.msg("未查询到任何数据!");
-                            vm.$set(vm.$data, "dataWrap", dataWrap);
+                            vm.$set(vm.$data, "dataPacket", dataPacket);
                         }
                     });
                 },
@@ -143,15 +143,15 @@
                         dataType: "json",
                         async: false,
                         data: {
-                        	dataWrap:this.dataWrap,
+                        	dataPacket:this.dataPacket,
                         	departmentId:nodeData.nodeBean==null?0:nodeData.nodeBean.id
                         },
                         success: function (response) {
-                            var dataWrap = response.get("dataWrap");
-                            if (dataWrap == null || dataWrap.dataList == null || dataWrap.dataList.length ==0){
+                            var dataPacket = response.get("dataPacket");
+                            if (dataPacket == null || dataPacket.dataList == null || dataPacket.dataList.length ==0){
                             	$.msg('未查询到任何数据');
                             }
-                            vm.$set(vm.$data, "dataWrap", dataWrap);
+                            vm.$set(vm.$data, "dataPacket", dataPacket);
                         }
                     });
                 },
@@ -166,13 +166,13 @@
                 },
                 del:function(){
                 	$.confirm("确定删除吗?",function(){
-                		var dataWrap=$.createAjaxDataWrap();
+                		var dataPacket=$.createAjaxDataPacket();
                     	var dataList = vm.$refs["tableAdmin"].getSelectedRows();
-                    	dataWrap.dataList=dataList;
+                    	dataPacket.dataList=dataList;
                     	$.request({
                             url: $$pageContextPath + "sys/admin/delete",
                             data: {
-                            	dataWrap:dataWrap,
+                            	dataPacket:dataPacket,
                             },
                             success: function (response) {
                                 $.success("删除成功");
@@ -187,17 +187,17 @@
                 	
                 },
                 save:function(){
-                	var addDataWrap = $.createAjaxDataWrap();
-                    var updateDataWrap = $.createAjaxDataWrap();
+                	var addDataPacket = $.createAjaxDataPacket();
+                    var updateDataPacket = $.createAjaxDataPacket();
                     var addDataList = this.$refs.tableAdmin.getAddedRows();
                     var updateDataList = this.$refs.tableAdmin.getUpdatedRows();
-                    addDataWrap.dataList = addDataList;
-                    updateDataWrap.dataList = updateDataList;
+                    addDataPacket.dataList = addDataList;
+                    updateDataPacket.dataList = updateDataList;
                 	$.request({
                         url: $$pageContextPath + "sys/admin/save",
                         data: {
-                        	addDataWrap: addDataWrap,
-                        	updateDataWrap: updateDataWrap
+                        	addDataPacket: addDataPacket,
+                        	updateDataPacket: updateDataPacket
                         },
                         success: function (response) {
                             $.success("保存成功");
