--- a/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/index/main.html
+++ b/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/index/main.html
@@ -68,8 +68,8 @@
 		</ll:filllayout>
 		<script type="text/javascript">
 			function init(response) {
-				var worksheetDataWrap = response.get("worksheetDataWrap");
-				ajaxgridPersonal.setDataWrap(worksheetDataWrap);
+				var worksheetDataPacket = response.get("worksheetDataPacket");
+				ajaxgridPersonal.setDataPacket(worksheetDataPacket);
 			}
 		</script>
 	</form>
