--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/department/department.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/department/department.html
@@ -55,7 +55,7 @@
                                     </ll-col>
                                 </ll-row>
                             </div>
-                            <ll-table-zz :data-wrap="dataWrap" :readonly="false" 
+                            <ll-table-zz :data-wrap="dataPacket" :readonly="false" 
                             		ref="tableDepartment"
                             		@current-change="retrieve" 
                             		@row-dblclick="rowDblcick">
@@ -83,12 +83,12 @@
     </div>
 
     <script type="text/javascript">
-        var dataWrap = ajaxResponse.get("dataWrap");
+        var dataPacket = ajaxResponse.get("dataPacket");
 
         var vm = new Vue({
             el: '#app',
             data: {
-                dataWrap: dataWrap,
+                dataPacket: dataPacket,
                 datasource: $$pageContextPath + "sys/department-tree/departments",
                 labelDatasource: $$pageContextPath + "sys/department/label",
                 data: [],
@@ -103,19 +103,19 @@
             },
             methods: {
                 retrieve:function() {
-                	var dataWrap=$.createAjaxDataWrap();
-                	dataWrap.setData(this.departmentForm);
+                	var dataPacket=$.createAjaxDataPacket();
+                	dataPacket.setData(this.departmentForm);
                     $.request({
                         url: $$pageContextPath + "sys/department/retrieve",
                         data: {
-                        	dataWrap:dataWrap
+                        	dataPacket:dataPacket
                         },
                         success: function (response) {
-                            var dataWrap = response.get("dataWrap");
-                            if (dataWrap == null || dataWrap.dataList == null || dataWrap.dataList.length ==
+                            var dataPacket = response.get("dataPacket");
+                            if (dataPacket == null || dataPacket.dataList == null || dataPacket.dataList.length ==
                                 0)
                                 $.msg("未查询到任何数据!");
-                            vm.$set(vm.$data, "dataWrap", dataWrap);
+                            vm.$set(vm.$data, "dataPacket", dataPacket);
                         }
                     });
                 },
@@ -127,15 +127,15 @@
                         dataType: "json",
                         async: false,
                         data: {
-                        	dataWrap:this.dataWrap,
+                        	dataPacket:this.dataPacket,
                         	parentId:nodeData.nodeBean==null?0:nodeData.nodeBean.id
                         },
                         success: function (response) {
-                            var dataWrap = response.get("dataWrap");
-                            if (dataWrap == null || dataWrap.dataList == null || dataWrap.dataList.length ==0){
+                            var dataPacket = response.get("dataPacket");
+                            if (dataPacket == null || dataPacket.dataList == null || dataPacket.dataList.length ==0){
                             	$.msg('未查询到任何数据');
                             }
-                            vm.$set(vm.$data, "dataWrap", dataWrap);
+                            vm.$set(vm.$data, "dataPacket", dataPacket);
                         }
                     });
                 },
@@ -152,15 +152,15 @@
 					this.$refs.tableDepartment.addRow(newRow);
                 },
                 rowDblcick:function(row){
-                	var dataWrap=$.createAjaxDataWrap();
-                	dataWrap.setData(row);
+                	var dataPacket=$.createAjaxDataPacket();
+                	dataPacket.setData(row);
                 	$.openDialog({
                 		title : "维护部门",
                 		height:440,
                 		width:630,
                 		url : $$pageContextPath + '/sys/department/departmentDialog?aaa=2&testParam=321',
                 		data : {
-                			dataWrap:dataWrap,
+                			dataPacket:dataPacket,
                 			type:"edit"
                 		},
                 		yes : function() {
@@ -172,13 +172,13 @@
                 },
                 del:function(){
                 	$.confirm("确定删除吗?",function(){
-                		var dataWrap=$.createAjaxDataWrap();
+                		var dataPacket=$.createAjaxDataPacket();
                     	var dataList = vm.$refs["tableDepartment"].getSelectedRows();
-                    	dataWrap.dataList=dataList;
+                    	dataPacket.dataList=dataList;
                     	$.request({
                             url: $$pageContextPath + "sys/department/delete",
                             data: {
-                            	dataWrap:dataWrap,
+                            	dataPacket:dataPacket,
                             },
                             success: function (response) {
                                 $.success("删除成功");
@@ -193,17 +193,17 @@
                 	
                 },
                 save:function(){
-                	var addDataWrap = $.createAjaxDataWrap();
-                    var updateDataWrap = $.createAjaxDataWrap();
+                	var addDataPacket = $.createAjaxDataPacket();
+                    var updateDataPacket = $.createAjaxDataPacket();
                     var addDataList = this.$refs.tableDepartment.getAddedRows();
                     var updateDataList = this.$refs.tableDepartment.getUpdatedRows();
-                    addDataWrap.dataList = addDataList;
-                    updateDataWrap.dataList = updateDataList;
+                    addDataPacket.dataList = addDataList;
+                    updateDataPacket.dataList = updateDataList;
                 	$.request({
                         url: $$pageContextPath + "sys/department/save",
                         data: {
-                        	addDataWrap: addDataWrap,
-                        	updateDataWrap: updateDataWrap
+                        	addDataPacket: addDataPacket,
+                        	updateDataPacket: updateDataPacket
                         },
                         success: function (response) {
                             $.success("保存成功");
