--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/menu/menu.html
@@ -128,6 +128,7 @@
                     });
                 },
                 handleNodeClick:function(nodeData, node) {
+                	this.dataPacket.pageInfo.currentPageNum=1;
                 	$.request({
                         url: $$pageContextPath + "sys/menu/retrieve",
                         type: "POST",
