--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/admin/detail.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/sys/admin/detail.html
@@ -17,6 +17,24 @@
              <ll-form-item label="登录账号">
                  <ll-input v-model="form.loginAccountNo"></ll-input>
              </ll-form-item>
+             <ll-form-item label="头像">
+             	<img style="width:100px;height:100px;" :src="iconUrl" />
+                 <ll-upload
+				  class="upload-demo"
+				  :action="uploadUrl"
+				  :on-preview="handlePreview"
+				  :on-remove="handleRemove"
+				  ref="upload"
+				  :before-remove="beforeRemove"
+				  multiple
+				  :limit="3"
+				  :on-exceed="handleExceed"
+				  :on-success="uploadSuccess"
+				  :file-list="fileList">
+				  <ll-button size="small" type="primary">点击上传</ll-button>
+				  <div slot="tip" class="el-upload__tip">只能上传jpg/png文件，且不超过500kb</div>
+				</ll-upload>
+             </ll-form-item>
              <ll-form-item label="密码">
                  <ll-input v-model="form.loginPassword"></ll-input>
              </ll-form-item>
@@ -62,9 +80,28 @@
         var vm = new Vue({
             el: '#app',
             data: {
+            	uploadUrl: $$pageContextPath + "/sys/file/upload",
                 form: formData,
+                iconUrl:"",
+                fileList: []
             },
             methods: {
+            	handleRemove:function(file, fileList) {
+                  console.log(file, fileList);
+                },
+                handlePreview:function(file) {
+                  console.log(file);
+                },
+                handleExceed:function(files, fileList) {
+                	$.alert('当前限制选择 3 个文件，本次选择了 '+files.length+' 个文件，共选择了'+files.length + fileList.length+' 个文件');
+                },
+                beforeRemove:function(file, fileList) {
+                  return this.$confirm('确定移除'+ file.name +'？');
+                },
+                uploadSuccess:function(response, file, fileList){
+                	var menuId = response.parameterMap.file.id;
+					vm.iconUrl = $$pageContextPath + "sys/file/download/"+menuId;
+                },
                 save:function(){
                 	var addDataPacket = $.createAjaxDataPacket();
                     var updateDataPacket = $.createAjaxDataPacket();
@@ -88,7 +125,7 @@
                         }
                     });
                 },
-                showBindRolesDialog(row){
+                showBindRolesDialog:function(row){
                 },
             }
         });
